# mcp-odoo-jsonrpc

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: changelog-check.yml  ci.yml  release.yml  version-bump.yml
docs/adr/: 001-implementation-language.md  002-authentication-strategy.md  003-odoo-integration-pattern.md  004-dev-mode-endpoint-discovery.md  005-security-model.md  006-cli-architecture.md  007-no-universal-execute.md  008-masked-mode-anonymization.md  009-wiki-sensitive-filter.md  README.md
docs/api/: odoo-jsonrpc-reference.md
docs/architecture/: context-map.md  domain-model.md
src/mcp_odoo_jsonrpc/: __main__.py  auth.py  cli.py  config.py  server.py  service.py
src/mcp_odoo_jsonrpc/acl/: mapper.py  protocol.py  transport.py
src/mcp_odoo_jsonrpc/domain/: enums.py  models.py  sensitive.py
tests/: test_config.py  test_domain.py  test_mapper.py  test_sensitive.py  test_wiki_format.py  test_wiki_mapper.py
