[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-odoo-jsonrpc"
version = "0.1.0"
description = "MCP server and CLI for Odoo ERP integration via JSON-RPC (tasks & timesheets)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Даниил Петрянкин", email = "daniilpet17@yandex.ru" },
]
keywords = ["mcp", "odoo", "json-rpc", "erp", "tasks", "timesheets", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "playwright>=1.49.0",
]

[project.urls]
Homepage = "https://github.com/daniilpet/mcp-odoo-jsonrpc"
Documentation = "https://github.com/daniilpet/mcp-odoo-jsonrpc/tree/main/docs"
Repository = "https://github.com/daniilpet/mcp-odoo-jsonrpc"
Issues = "https://github.com/daniilpet/mcp-odoo-jsonrpc/issues"
Changelog = "https://github.com/daniilpet/mcp-odoo-jsonrpc/blob/main/CHANGELOG.md"

[project.scripts]
mcp-odoo-server = "mcp_odoo_jsonrpc.__main__:main"
mcp-odoo-cli = "mcp_odoo_jsonrpc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
